Prevent blurry scaling

--- a/resources/assets/less/bem/profile-tournament-banner.less
+++ b/resources/assets/less/bem/profile-tournament-banner.less
@@ -19,7 +19,6 @@
 .profile-tournament-banner {
   .own-layer();
   transition: transform .2s cubic-bezier(.08,.82,.17,1);
-  will-change: transform;
 
   @media @desktop {
     position: absolute;
